package filesystem;

option java_package = "thredds.filesystem";
option java_outer_classname = "FileSystemProto";

message Directory {
  required string path = 1;
  optional uint64 lastModified = 2;
  repeated File files = 3;
  repeated Attribute atts = 5;
}

message File {
  required string name = 1;
  optional uint64 lastModified = 2;
  optional uint64 length = 3;
  required bool isDirectory = 4;
  repeated Attribute atts = 5;
}

message Attribute {
  required string name = 1;
  enum Type {
    STRING = 0;
    BYTE = 1;
    SHORT = 2;
    INT = 3;
    LONG = 4;
    FLOAT = 5;
    DOUBLE = 6;
  }
  required Type type = 2;
  required uint32 len = 3;
  required bytes data = 4;
}
